# Product_Analyser

./: .gitignore  LICENSE  README.md  data.csv  graph.py  main.py  pyproject.toml  sendemail.py  users.db
static/: index.js  styles.css
templates/: finaldata.html  index.html
